--- a/src/components/common/layout/Header/Header.scss
+++ b/src/components/common/layout/Header/Header.scss
@@ -61,3 +61,28 @@
     color: rgba(0, 0, 0, 0.5) !important;
   }
 }
+
+.haschem-navbar {
+  box-shadow: -4px 4px 8px rgba(0, 0, 0, 0.1), 4px 4px 8px rgba(0, 0, 0, 0.1),
+    0 4px 8px rgba(0, 0, 0, 0.1);
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  background-color: white;
+  color: #374151;
+}
+
+.text-orange {
+  color: #f79903;
+}
+.hover\:text-orange {
+  &:hover {
+    @media (hover: hover) {
+      // color: var(--color-blue-600);
+      color: #f79903;
+    }
+  }
+}
+.hb-dropdown {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
