--- a/src/pages/ContactUs/ContactUs.scss
+++ b/src/pages/ContactUs/ContactUs.scss
@@ -6,8 +6,12 @@
 }
 
 .contactus-banner {
-  background: url("./../../assets/img/contact/banner.jpeg") no-repeat center
+  background: url("./../../assets/img/contact/banner.jpeg") no-repeat bottom
     center/100%;
+  @media screen and (max-width: 500px) {
+    background-position: center;
+    background-size: cover;
+  }
 }
 
 // .hexagon {
@@ -65,6 +69,7 @@
 .hexagon::before {
   bottom: 100%;
   border-bottom: 29px solid #2c7da0;
+  //   margin-top: -1px;
 }
 
 .hexagon::after {
@@ -73,8 +78,8 @@
 }
 
 .contact-final-notes-wrapper {
-    margin-bottom: -55px;
-    position: relative;
+  margin-bottom: -55px;
+  position: relative;
 }
 
 .contact-final-notes {
@@ -83,4 +88,21 @@
     no-repeat padding-box;
   background: transparent linear-gradient(98deg, #f79901 0%, #2b7da0 100%) 0% 0%
     no-repeat padding-box;
+}
+
+.hb-contact-tile-wrapper {
+  @media screen and (max-width: 1024px) {
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+  }
+}
+.hb-contact-form {
+  input,
+  textarea {
+    outline: none;
+    &:focus {
+      box-shadow: 0 0 2px 1px rgba(43, 125, 160, 0.3);
+    }
+  }
 }
