--- a/src/index.css
+++ b/src/index.css
@@ -2,37 +2,47 @@
 @import "@fortawesome/fontawesome-free/css/all.min.css";
 
 body {
-    font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .hb-h-350 {
-    height: 350px;
-    @media screen and (max-width: 500px) {
-        height: 250px;
-      }
+  height: 350px;
+  @media screen and (max-width: 500px) {
+    height: 250px;
+  }
 }
 .hb-bg-brand {
-    background-color: #F79A06;
+  background-color: #f79a06;
+}
+.hb-border-white:hover {
+  background-color: #f79a06;
 }
 .hb-bg-brand:hover {
-    background-color: #2D7DA0;
+  background-color: #2d7da0;
 }
 
 .hb-bg-primary {
-    background-color: #2D7DA0;
+  background-color: #2d7da0;
 }
 .hb-bg-primary:hover {
-    background-color: rgba(50, 103, 125, 1);
+  background-color: rgba(50, 103, 125, 1);
 }
 .hover\:bg-primary-500:hover {
-    background-color: #59A4B0;
-    color: #fff;
+  background-color: #59a4b0;
+  color: #fff;
 }
 .hb-contact-form {
-    input, textarea {
-        &::focus-visible {
-           outline: 1px solid #2D7DA0;
-           border-color: #2D7DA0; 
-        }
+  input,
+  textarea {
+    &::focus-visible {
+      outline: 1px solid #2d7da0;
+      border-color: #2d7da0;
     }
+  }
+}
+.hover\:border-orange {
+    border-color: #f79a06;
+}
+.hover\:text-white {
+    color: #fff;
 }
