--- a/src/features/BannerCarousel/BannerCarousel.scss
+++ b/src/features/BannerCarousel/BannerCarousel.scss
@@ -20,14 +20,14 @@
       background-image: url("./../../assets/img/banner/banner_3.jpg");
     }
     &:nth-of-type(6) {
-      background-image: url("./../../assets/img/banner/banner_1_1.jpg");
+      background-image: url("./../../assets/img/banner/banner_4.jpg");
     }
-    &:nth-of-type(7) {
-      background-image: url("./../../assets/img/banner/banner_2_2.jpg");
-    }
+    // &:nth-of-type(7) {
+    //   background-image: url("./../../assets/img/banner/banner_2_2.jpg");
+    // }
     h3 {
       font-size: 2.8rem;
-      color: white;
+      color: #101828;
       font-weight: 600;
       transform: translateY(-20px);
       padding-bottom: 5px;
@@ -37,7 +37,7 @@
     }
     p {
       font-size: 1.4rem;
-      color: white;
+      color: #101828;
       font-weight: 500;
       transform: translateY(-60px);
       opacity: 0;
@@ -51,13 +51,13 @@
       }
       h3 {
         font-size: 1.8rem;
-        color: white;
+        color: #101828;
         font-weight: 600;
         transform: translateY(-20px);
       }
       p {
         font-size: 0.9rem;
-        color: white;
+        color: #101828;
         font-weight: 500;
         transform: translateY(-60px);
         opacity: 0;
@@ -66,7 +66,7 @@
     @media (max-width: 400px) {
       h3 {
         font-size: 1.5rem;
-        color: white;
+        color: #101828;
         font-weight: 600;
         transform: translateY(-20px);
       }
@@ -89,7 +89,7 @@
     .owl-dot {
       span {
         background-color: transparent;
-        border: 1px solid white;
+        border: 1px solid #101828;
         width: 15px;
         height: 15px;
         &:hover {
@@ -106,4 +106,7 @@
       }
     }
   }
+}
+.hb-btn-bg-transition {
+  transition: background-color 2s linear;
 }
