--- a/src/features/TypeaheadSearch/TypeaheadSearch.scss
+++ b/src/features/TypeaheadSearch/TypeaheadSearch.scss
@@ -1,8 +1,7 @@
 .typeaheadSearch {
   .form-control {
     &:focus {
-      background-color: white;
-      border-color: white;
+      border-color: #2d7da0;
     }
   }
   @media (max-width: 991.98px) {
@@ -23,6 +22,16 @@
   border: none;
   padding-left: 5px;
   padding-right: 8px;
+}
+
+.rbt-input-main {
+  height: 38px;
+  padding-left: 10px;
+  padding-right: 10px;
+  &:focus-visible {
+    box-shadow: none;
+    outline: none;
+  }
 }
 
 .rbt-menu {
