--- a/src/components/common/layout/Header/Header.scss
+++ b/src/components/common/layout/Header/Header.scss
@@ -86,8 +86,15 @@
 .hb-dropdown {
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
-  height: 200px;
+  height: 210px;
+  &.small {
+    height: 175px;
+  }
   overflow-y: auto;
+  a:last-of-type {
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
 }
 
 .nav-items a {
@@ -109,5 +116,5 @@
   }
 }
 .hb-border-primary-focus:focus {
-    box-shadow: 0 0 1px 1px inset #2d7da0;
+  box-shadow: 0 0 1px 1px inset #2d7da0;
 }
