--- a/src/features/TypeaheadSearch/TypeaheadSearch.scss
+++ b/src/features/TypeaheadSearch/TypeaheadSearch.scss
@@ -28,6 +28,7 @@
   height: 38px;
   padding-left: 10px;
   padding-right: 10px;
+  width: 100%;
   &:focus-visible {
     box-shadow: none;
     outline: none;
