--- a/src/features/TypeaheadSearch/TypeaheadSearch.scss
+++ b/src/features/TypeaheadSearch/TypeaheadSearch.scss
@@ -38,6 +38,7 @@
 .rbt-menu.dropdown-menu {
   width: calc(100% + 80px) !important;
   .dropdown-item {
+    display: block;
     padding-bottom: 10px;
     margin-bottom: 10px;
     border-bottom: 1px solid #A0A0A0;
