feat: Add new logo and update styles for product component
- Added a new SVG logo file `logo_white_2.svg` to the assets.
- Updated `Product.scss` to enhance styling, including new card title band styles.
- Modified `Product.tsx` to apply new styles and adjust background colors.
- Updated footer with new address details and logo size adjustments.
- Changed header logo to a new image and adjusted its size.
- Updated banner carousel images to new paths.
- Revised contact us page with updated location details.
- Adjusted home page text size for better readability.

--- a/src/components/common/layout/Header/Header.scss
+++ b/src/components/common/layout/Header/Header.scss
@@ -4,9 +4,10 @@
   }
 }
 .hb-logo {
-  img {
-    width: 90%;
-  }
+  // background-image: url("./../.../../../../../assets/img/brand/logo_orange.svg");
+  // background-repeat: no-repeat;
+  // background-size: 112%;
+  // background-position: left;
 }
 .navbar-main {
   background-color: #172b4d !important;
