feat: Add new banner image and update background images in BannerCarousel component style: Update Product component styles and button hover effects fix: Correct partner image import path in Partners component style: Enhance button styles and add hover effects in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,10 @@ body {
 .hb-bg-primary:hover {
   background-color: rgba(50, 103, 125, 1);
 }
+.hb-bg-primary-hover:hover {
+  background-color: #2d7da0;
+  color: #fff;
+}
 .hover\:bg-primary-500:hover {
   background-color: #59a4b0;
   color: #fff;
@@ -64,4 +68,7 @@ body {
 }
 .hover\:text-white:hover {
   color: #fff;
+}
+.hb-bg-brand-hover:hover {
+  background-color: #f79a06;
 }
