--- a/src/components/common/Product/Product.scss
+++ b/src/components/common/Product/Product.scss
@@ -8,22 +8,22 @@
   padding-bottom: 35px;
 }
 .card-title-band {
-  &::before,
-  &::after {
-    content: "";
-    display: block;
-    width: 1rem;
-    height: 1px;
-    background-color: #F79901;
-    top: calc(50% - 1px);
-    position: absolute;
-  }
-  &::before {
-    left: -1rem;
-  }
-  &::after {
-    right: -1rem;
-  }
+  // &::before,
+  // &::after {
+  //   content: "";
+  //   display: block;
+  //   width: 1rem;
+  //   height: 1px;
+  //   background-color: #F79901;
+  //   top: calc(50% - 1px);
+  //   position: absolute;
+  // }
+  // &::before {
+  //   left: -1rem;
+  // }
+  // &::after {
+  //   right: -1rem;
+  // }
 }
 .product-stock {
   width: 25px;
