--- a/src/features/BannerCarousel/BannerCarousel.scss
+++ b/src/features/BannerCarousel/BannerCarousel.scss
@@ -7,12 +7,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: left center;
-    @media (max-width: 768px) {
-      height: 65vh;
-    }
-    @media (max-width: 600px) {
-      height: 70vh;
-    }
     &:nth-of-type(3) {
       background-image: url("/assets/img/banner/image_2.jpg");
     }
@@ -25,6 +19,25 @@
     &:nth-of-type(6) {
       background-image: url("/assets/img/banner/banner_3.jpg");
     }
+    @media (max-width: 768px) {
+      height: 65vh;
+    }
+    @media (max-width: 600px) {
+      height: 55vh;
+      &:nth-of-type(3) {
+        background-image: url("/assets/img/banner/m_image_2.jpg");
+      }
+      &:nth-of-type(4) {
+        background-image: url("/assets/img/banner/m_image_3.jpg");
+      }
+      &:nth-of-type(5) {
+        background-image: url("/assets/img/banner/m_image_4.jpg");
+      }
+      &:nth-of-type(6) {
+        background-image: url("/assets/img/banner/banner_3.jpg");
+      }
+    }
+   
 
     h3 {
       font-size: 2.8rem;
@@ -51,13 +64,13 @@
         display: block !important;
       }
       h3 {
-        font-size: 1.8rem;
+        font-size: 2rem;
         color: #101828;
         font-weight: 600;
         transform: translateY(-20px);
       }
       p {
-        font-size: 0.9rem;
+        font-size: 1.1rem;
         color: #101828;
         font-weight: 500;
         transform: translateY(-60px);
