Feat: Add new banner images and update styles in various components

--- a/src/pages/ContactUs/ContactUs.scss
+++ b/src/pages/ContactUs/ContactUs.scss
@@ -9,7 +9,7 @@
 }
 
 .contactus-banner {
-  background: url("./../../assets/img/contact/banner.jpeg") no-repeat bottom
+  background: url("/assets/img/banner/banner_new.jpeg") no-repeat bottom
     center/100%;
   @media screen and (max-width: 500px) {
     background-position: center;
