--- a/src/components/common/layout/Header/Header.scss
+++ b/src/components/common/layout/Header/Header.scss
@@ -71,6 +71,9 @@
   border-bottom-left-radius: 4px;
   background-color: white;
   color: #374151;
+  @media (max-width: 768px) {
+    border-radius: 0;
+  }
 }
 
 .text-orange {
