Refactor: Update Header styles for mobile responsiveness and add social links

--- a/src/components/common/layout/Header/Header.scss
+++ b/src/components/common/layout/Header/Header.scss
@@ -168,14 +168,11 @@
     }
   }
 }
-// @media (max-width: 1024px) {
-//   .toggle-menu {
-//     display: flex;
-//   }
-//   .navbar-wrapper {
-//     display: none;
-//   }
-// }
+@media (max-width: 900px) {
+  .hideSocialOnMobile {
+    display: none;
+  }
+}
 @media (max-width: 640px) {
   .hb-gbl-search {
     width: 100%;
