--- a/src/features/TypeaheadSearch/TypeaheadSearch.scss
+++ b/src/features/TypeaheadSearch/TypeaheadSearch.scss
@@ -55,6 +55,10 @@
     width: 100%;
     padding: 5px 8px 6px;
     border-radius: 4px;
+    border-width: 0 1px 1px 1px;
+    border-style: solid;
+    border-color: gray;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
     .dropdown-item {
       list-style: none;
       white-space: break-spaces;
