--- a/src/pages/Services/Services.scss
+++ b/src/pages/Services/Services.scss
@@ -1,5 +1,5 @@
 .services-banner {
-  background: url("/assets/img/banner/banner_new_4.jpeg") no-repeat bottom
+  background: url("/assets/img/banner/banner_new_4.webp") no-repeat bottom
     center/100%;
   background-size: cover;
   @media screen and (max-width: 500px) {
