--- a/src/components/common/layout/Header/Header.scss
+++ b/src/components/common/layout/Header/Header.scss
@@ -129,11 +129,13 @@
   background: rgba(0, 0, 0, 0.94);
   top: 0;
   z-index: 99999999;
-  top: -32px;
+  top: 0;
 
   .close {
-    width: 50px;
-    height: 50px;
+    width: 48px;
+    height: 48px;
+    position: relative;
+    right: 5px;
     &:hover {
       color: red;
     }
