--- a/src/components/common/layout/Header/Header.scss
+++ b/src/components/common/layout/Header/Header.scss
@@ -89,6 +89,8 @@
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
   height: 210px;
+  overflow-y: auto;
+  overflow-x: hidden;
   &.small {
     height: 175px;
   }
